--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -5,5 +5,6 @@ FROM nginx:1.21.1
 RUN rm /etc/nginx/nginx.conf
 
 # Copy the modified Nginx config
-COPY config/nginx.conf /etc/nginx
-COPY config/rappiml.conf /etc/nginx/sites-enabled/
+COPY config/nginx.conf /etc/nginx/
+COPY config/mlflow.conf /etc/nginx/sites-enabled/
+# COPY config/rappiml.conf /etc/nginx/sites-enabled/
