networking flow ready

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
 services:
     db:
         restart: always
+        # build:
+        #     context: ./
+        #     dockerfile: docker/mysql/Dockerfile
         image: mysql/mysql-server:8.0.26
         container_name: rappi-ml
         expose:
@@ -14,6 +17,7 @@ services:
             - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
         volumes:
             - dbdata:/var/lib/mysql
+        # command: bash -c "mysql rappiml --host 0.0.0.0 --port 3306 -p${MYSQL_ROOT_PASSWORD} -u root < /tmp/rappi-db.sql"
 
     ml-server:
         restart: always
@@ -32,7 +36,6 @@ services:
             - MYSQL_USER=${MYSQL_USER}
             - MYSQL_PASSWORD=${MYSQL_PASSWORD}
             - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-        # command: mlflow server --backend-store-uri mysql+pymysql://${MYSQL_USER}:${MYSQL_PASSWORD}@db:3306/${MYSQL_DATABASE} --default-artifact-root file:/home/mlflow-artifacts/ --host 0.0.0.0        
         command: >
             bash -c "python ${SCRIPTS_DIR}/train.py --input_csv ${DATA_DIR}/orders.csv --output_dir ${TAKEN_MODEL_DIR}
             && mlflow models serve -m ${TAKEN_MODEL_DIR} -h 0.0.0.0"
