--- a/docker/mlflow/Dockerfile
+++ b/docker/mlflow/Dockerfile
@@ -1,18 +1,29 @@
+################################################################################
+################################## BASE IMAGE ##################################
+################################################################################
 FROM continuumio/miniconda3
 
 
-ENV RAPPI_WORKSPACE /home/rappiml
+################################################################################
+################################# ENVIRONMENT  #################################
+################################################################################
 
+ARG RAPPI_WORKSPACE
+# ENV RAPPI_WORKSPACE /home/rappiml
 RUN mkdir ${RAPPI_WORKSPACE}
+
+################################################################################
+############################# PYTHON DEPENDENCIES  #############################
+################################################################################
 
 RUN python -m pip install --upgrade pip
 RUN python -m pip install mlflow pymysql cryptography
 
-COPY python/utils ${RAPPI_WORKSPACE}/utils
+################################################################################
+############################### INSTALL OUR PKG  ###############################
+################################################################################
 
-# RUN apt update && apt upgrade && apt install -y curl
-# RUN curl https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh --output /tmp/Miniconda3-latest-Linux-x86_64.sh
-# RUN bash /tmp/Miniconda3-latest-Linux-x86_64.sh -b -p ${HOME}/miniconda
+COPY python/utils ${RAPPI_WORKSPACE}/utils
 
 # Install python packages
 
@@ -20,6 +31,11 @@ WORKDIR ${RAPPI_WORKSPACE}/utils
 RUN python setup.py bdist_wheel
 RUN cp dist/rappiml-0.0.1-py3-none-any.whl ${RAPPI_WORKSPACE}
 RUN pip install ${RAPPI_WORKSPACE}/rappiml-0.0.1-py3-none-any.whl
+
+################################################################################
+################ COPY DATA AND SCRIPTS TO TRAIN AND SAVE MODEL  ################
+################################################################################
+
 RUN mkdir -p ${RAPPI_WORKSPACE}/models/
 
 COPY scripts ${RAPPI_WORKSPACE}/scripts
