--- a/docker/webapp/Dockerfile
+++ b/docker/webapp/Dockerfile
@@ -1,19 +1,43 @@
+################################################################################
+################################## BASE IMAGE ##################################
+################################################################################
+
 FROM python:3.9.7-slim-buster
 
-# flask port
+################################################################################
+################################# ENVIRONMENT  #################################
+################################################################################
+
 EXPOSE 5001
 
 # We will store our source code here
-ENV APP_DIR /home/rappiml
+# ENV APP_DIR /home/rappiml
+ARG APP_DIR
+
+# The name of our app
 ENV FLASK_APP=rappiapp
 
+################################################################################
+############################### SYSTEM LIBRARIES ###############################
+################################################################################
+
+# Git needed by MLFlow
 RUN apt-get update -y && apt-get install -y git
 
+################################################################################
+############################# PYTHON DEPENDENCIES  #############################
+################################################################################
+RUN python3.9 -m pip install --upgrade pip
+RUN python3.9 -m pip install pandas mlflow pymysql
+
+################################################################################
+############################### INSTALL OUR APP  ###############################
+################################################################################
+
+# Copy app
 RUN mkdir ${APP_DIR}
 COPY python/webapp ${APP_DIR}/webapp
 
+# Install app
 WORKDIR ${APP_DIR}/webapp
-
-RUN python3.9 -m pip install --upgrade pip
-RUN python3.9 -m pip install pandas mlflow pymysql
 RUN python3.9 -m pip install -e .
